Fixing responsive on mobile device

--- a/UAS-SEM2/style.css
+++ b/UAS-SEM2/style.css
@@ -20,7 +20,7 @@ body {
     font-family: 'Material Symbols Rounded';
     font-weight: normal;
     font-style: normal;
-    font-size: 20px;
+    font-size: 24px;
     /* line-height: 1; */
     letter-spacing: normal;
     text-transform: none;
@@ -176,7 +176,7 @@ main {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    gap: 48px;
+    gap: 32px;
     width: 100%;
     position: sticky;
     top: 0;
@@ -221,6 +221,14 @@ main {
 
 #articles .article-header input:focus {
     outline: none !important;
+}
+
+#articles .article-header img {
+    display: none;
+    object-fit: cover;
+    width: 38px;
+    height: 38px;
+    border-radius: 100%;
 }
 
 .notif-and-bookmark {
@@ -378,5 +386,68 @@ main {
 
     .topics {
         gap: 8px;
+    }
+}
+
+@media (width <=992px) {
+    #articles .article-header img {
+        display: block;
+    }
+
+    #aside {
+        display: none;
+    }
+}
+
+@media (width <=768px) {
+    nav {
+        height: 60px;
+        width: 100%;
+        position: fixed;
+        z-index: 1;
+        top: unset;
+        bottom: 0;
+        background-color: #fff;
+        display: flex;
+        flex-direction: row;
+
+        border-right: none;
+        border-top: #dbdbdb solid 1px;
+    }
+
+    #navbrand {
+        display: none;
+    }
+
+    .links {
+        display: flex;
+        flex-direction: row;
+        width: 100%;
+    }
+
+    .link {
+        width: 100%;
+    }
+
+    #articles {
+        margin-left: 0;
+        margin-bottom: 60px;
+    }
+
+    #articles .article-header {
+        gap: 16px;
+    }
+
+    .notif-and-bookmark {
+        display: none;
+    }
+
+    .featured-article {
+        flex-direction: column;
+        gap: 0;
+    }
+
+    .featured-article img {
+        width: 100%;
     }
 }
